export type StmAnalysis = {
    offsets:number[];
    occupancies:number[];
    occupancyLabels:string[];
    accessibilities:number[];
    accessibilityLabels:string[];
}